added each assignment to a package