@@ -1,49 +1,52 @@
 package StackOfPlates;
 
 import java.util.LinkedList;
+import java.util.Optional;
 import java.util.Stack;
 
 public class StackOfPlates {
-    private LinkedList<Stack<Integer>> stacks = new LinkedList<Stack<Integer>>();
-    private int stackLimit;
+    private final LinkedList<Stack<Integer>> stacks = new LinkedList<>();
+    private final int stackLimit;
 
     public StackOfPlates(int limit)
     {
         stackLimit = limit;
     }
 
-    public Stack lastStack() {
+    public Stack<Integer> lastStack() {
         if (stacks.size() == 0)
             return null;
         return stacks.get(stacks.size() - 1);
     }
 
-    public void Push(int value) {
-        Stack lastStack = lastStack();
+    public void push(int value) {
+        final Stack<Integer> lastStack = lastStack();
         if (lastStack != null && lastStack.size() != stackLimit) {
             lastStack.push(value);
         } else {
-            Stack newStack = new Stack();
+            Stack<Integer> newStack = new Stack<>();
             newStack.push(value);
             stacks.add(newStack);
         }
     }
 
-    public int Pop()
+    public Optional<Integer> pop()
     {
-        Stack lastStack = lastStack();
+        Stack<Integer> lastStack = lastStack();
         if (lastStack == null)
-            return -1;
-        int poppedVal = (int) lastStack.pop();
+            return Optional.empty();
+        Optional<Integer> poppedVal = Optional.of(lastStack.pop());
         if (lastStack.size() == 0) {
-            stacks.remove(stacks.size() - 1);
+            stacks.removeLast();
         }
         return poppedVal;
     }
 
-    public int PopAt(int index) {
-        Stack stack = stacks.get(index);
-        int poppedVal = (int) stack.pop();
+    public int popAt(int index) {
+        if (index < 0 || index >= stacks.size())
+            return -1;
+        Stack<Integer> stack = stacks.get(index);
+        int poppedVal = stack.pop();
         if (stack.isEmpty())
             stacks.remove(index);
         return poppedVal;
